Fix the spacing of the social icons in footer

--- a/app/assets/stylesheets/common.sass
+++ b/app/assets/stylesheets/common.sass
@@ -273,11 +273,11 @@ body
             ul.social_media
               float: left
               margin: 0
-              padding: 10px 0 0 61px
+              width: 100%
               background: none
               border: none
               li
-                margin: 0px 20px 0px 0px
+                width: 7%
                 a
                   display: block
                   width: 25px
